--- a/app/views/consultations/_form.haml
+++ b/app/views/consultations/_form.haml
@@ -8,9 +8,19 @@
   - if current_user.editor?
     = panel(:caution, 'Médico') do
       .row-fluid
-        .form-group.col-md-4
-          .input-group
-            = f.select :user_id, options_for_select(ConsultationPresenter.new(@consultation).doctors, @consultation.doctor&.id), {}, class: "form-control input-md"
+        .form-group.col-md-5
+          = f.select :user_id,
+            options_for_select(ConsultationPresenter.new(@consultation).doctors, @consultation.doctor&.id),
+            {},
+            class: "form-control input-sm"
+
+  = panel(:caution, 'Lugar de Consulta') do
+    .row-fluid
+      .form-group.col-md-5
+        = f.select :branch_office_id,
+          options_from_collection_for_select(@branch_offices, 'id', 'name', @consultation&.branch_office_id),
+          {},
+          include_blank: true, class: "form-control input-sm"
 
   = render partial: 'patient', locals: { form: f }
 
@@ -234,10 +244,11 @@
 
   .row-fluid
     = link_to "Consultas", patient_consultations_path(@patient), class: "btn btn-default"
-    = f.submit "Guardar", class: "btn btn-success"
+    = f.submit "Guardar", class: "btn btn-success", id: "save-consultation"
 
 = render 'modal_consultation'
 = render 'modal_certificates'
+= render 'modal_consents'
 = render 'modal_prescription'
 = render 'prescription'
 = render 'hint'
