--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -41,6 +41,7 @@
                   %ul.dropdown-menu{ role: "menu" }
                     = nav_to 'Usuarios', admin_users_path
                     = nav_to 'Actividades', admin_activities_path
+                    = nav_to 'Cobros', admin_charges_path
                     = nav_to 'Sucrusales', admin_branch_offices_path
                     = nav_to 'Preferencias', settings_path
               = yield :nav_option
@@ -72,3 +73,4 @@
     = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/jQuery.print/1.5.1/jQuery.print.min.js'
     = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap3-editable/js/bootstrap-editable.js'
     = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/keyboardjs/2.7.0/keyboard.min.js'
+    = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/cleave.js/1.0.2/cleave.min.js'
