Add consents to Hippocrates

--- a/app/views/consultations/_form.haml
+++ b/app/views/consultations/_form.haml
@@ -261,7 +261,7 @@
 
   .row-fluid
     = link_to "Consultas", patient_consultations_path(@patient), class: "btn btn-default"
-    = f.submit "Guardar", class: "btn btn-success", id: "save-consultation"
+    = f.submit "Guardar", class: "btn btn-success hippocrates--save"
 
 = render 'modal_consultation'
 = render 'modal_change_price'
