--- a/app/views/consultations/_modal_consents.haml
+++ b/app/views/consultations/_modal_consents.haml
@@ -19,33 +19,33 @@
             %label.col-sm-2.control-label{ for: "consent" } Consentimiento
             .col-md-6
               %select.form-control.input-sm#consent
-                %option{ value: "bichectomy" } Bichectomía
-                %option{ value: "placeholder" } Biopsia
-                %option{ value: "placeholder" } Blefaroplastia superior e inferior
-                %option{ value: "placeholder" } Botox
-                %option{ value: "placeholder" } Cens para exeresis de masa nasal
-                %option{ value: "placeholder" } Colesteatoma
-                %option{ value: "placeholder" } Consentimiento estetica
-                %option{ value: "placeholder" } Covid
-                %option{ value: "placeholder" } Dacriocistorrinostomía endonasal
-                %option{ value: "placeholder" } Dilatación de trompa de eustaquio
-                %option{ value: "placeholder" } Epistaxis 
-                %option{ value: "placeholder" } Exéresis de quiste y fístulas cervicales
-                %option{ value: "placeholder" } Extracción de cuerpo extraño nasal
-                %option{ value: "placeholder" } Fístula periauricular 
-                %option{ value: "placeholder" } Hematoma de pabellon auricular 
-                %option{ value: "placeholder" } Hematoma septal
-                %option{ value: "placeholder" } Osteoma
-                %option{ value: "placeholder" } Otoplastia mas rinoplastia
-                %option{ value: "placeholder" } Parotidectomía del lado afecto
-                %option{ value: "placeholder" } Poliposis nasosinusal
-                %option{ value: "placeholder" } Ránula 
-                %option{ value: "placeholder" } Reduccion de fractura nasal
-                %option{ value: "placeholder" } Retoque nasal
-                %option{ value: "placeholder" } Rino mas menton
-                %option{ value: "placeholder" } Rinoplastia secundaria con costilla
-                %option{ value: "placeholder" } Tratamiento de sinusitis
-                %option{ value: "placeholder" } Tumuraciones benignas del pabellon auricular y CAE
+                %option{ value: "bichectomy"                       } Bichectomía
+                %option{ value: "biopsy"                           } Biopsia
+                %option{ value: "blepharoplasty"                   } Blefaroplastia superior e inferior
+                %option{ value: "botox"                            } Botox
+                %option{ value: "cens"                             } Cens para exerésis de masa nasal
+                %option{ value: "cholestheatoma"                   } Colesteatoma
+                %option{ value: "consent"                          } Consentimiento estética
+                %option{ value: "covid"                            } Covid
+                %option{ value: "endonasal_dacryocystorhinostomy"  } Dacriocistorrinostomía endonasal
+                %option{ value: "eustachian_tube_balloon_dilation" } Dilatación de trompa de eustaquio
+                %option{ value: "epistaxis"                        } Epistaxis
+                %option{ value: "exeresis"                         } Exéresis de quiste y fístulas cervicales
+                %option{ value: "extraction"                       } Extracción de cuerpo extraño nasal
+                %option{ value: "fistula"                          } Fístula periauricular
+                %option{ value: "auricular_hematoma"               } Hematoma de pabellon auricular
+                %option{ value: "septal_hematoma"                  } Hematoma septal
+                %option{ value: "osteoma"                          } Osteoma
+                %option{ value: "otoplasty"                        } Otoplastia mas rinoplastia
+                %option{ value: "parotidectomy"                    } Parotidectomía del lado afecto
+                %option{ value: "sinonasal_polyposis"              } Poliposis nasosinusal
+                %option{ value: "ranula"                           } Ránula
+                %option{ value: "reduction"                        } Reduccion de fractura nasal
+                %option{ value: "nose_touch_up"                    } Retoque nasal
+                %option{ value: "functional_rhinoplasty"           } Rino mas menton
+                %option{ value: "secondary_rhinoplasty"            } Rinoplastia secundaria con costilla
+                %option{ value: "sinusitis_treatment"              } Tratamiento de sinusitis
+                %option{ value: "benign_tumors"                    } Tumuraciones benignas del pabellon auricular y CAE
               %em.text-muted Selecciona un consentimiento informado
 
       .modal-footer
