--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -35,15 +35,15 @@
               - if current_user.admin_or_super_admin?
                 %li.dropdown
                   %a.dropdown-toggle{ href: "#", role: "button", data: { toggle: "dropdown" }, aria: { expanded: "false" } }
-                    %i.fa.fa-user-shield
+                    %i.fa.fa-star-of-life
                     Admin
                     %span.caret
                   %ul.dropdown-menu{ role: "menu" }
-                    = nav_to 'Usuarios', admin_users_path
                     = nav_to 'Actividades', admin_activities_path
                     = nav_to 'Cobros', admin_charges_path
-                    = nav_to 'Sucrusales', admin_branch_offices_path
                     = nav_to 'Preferencias', settings_path
+                    = nav_to 'Sucrusales', admin_branch_offices_path
+                    = nav_to 'Usuarios', admin_users_path
               = yield :nav_option
 
           %ul.nav.navbar-nav.navbar-right
