--- a/app/views/anamneses/_form.haml
+++ b/app/views/anamneses/_form.haml
@@ -38,4 +38,4 @@
 
   .row-fluid
     = link_to "Cancelar", @referer_location || patients_path, class: "btn btn-default"
-    = f.submit "Guardar", class: "btn btn-success"
+    = f.submit "Guardar", class: "btn btn-success hippocrates--save"
