--- a/app/views/diseases/_form.haml
+++ b/app/views/diseases/_form.haml
@@ -15,4 +15,4 @@
           data: { confirm: t("diseases.destroy.confirm") },
           method: :delete,
           class: "btn btn-danger"
-      = f.submit "Guardar", class: "btn btn-success"
+      = f.submit "Guardar", class: "btn btn-success hippocrates--save"
