--- a/app/views/admin/users/_form.haml
+++ b/app/views/admin/users/_form.haml
@@ -52,4 +52,4 @@
   .form-group
     .col-md-10.col-md-offset-2
       = link_to "Cancelar", admin_users_path, class: "btn btn-default"
-      = f.submit "Guardar", class: "btn btn-success"
+      = f.submit "Guardar", class: "btn btn-success hippocrates--save"
