--- a/app/views/documents/_form.haml
+++ b/app/views/documents/_form.haml
@@ -36,4 +36,4 @@
           data: { confirm: t("medicines.destroy.confirm") },
           method: :delete,
           class: "btn btn-danger"
-      = f.submit "Guardar", class: "btn btn-success"
+      = f.submit "Guardar", class: "btn btn-success hippocrates--save"
