--- a/app/views/admin/branch_offices/index.haml
+++ b/app/views/admin/branch_offices/index.haml
@@ -7,14 +7,18 @@
 %table.table.table-striped
   %thead
     %tr
-      %th.col-md-6= t('branch_offices.fields.name')
-      %th.text-center.col-md-2= t('branch_offices.fields.main')
-      %th.text-center.col-md-2= t('branch_offices.fields.active')
+      %th.col-md-2= t('branch_offices.fields.name')
+      %th.col-md-4= t('branch_offices.fields.address')
+      %th.col-md-2= t('branch_offices.fields.phone_numbers')
+      %th.text-center.col-md-1= t('branch_offices.fields.main')
+      %th.text-center.col-md-1= t('branch_offices.fields.active')
       %th.col-md-2
   %tbody
   - @branch_offices.each do |branch_office|
     %tr
       %td= branch_office.name
+      %td= branch_office.address
+      %td= branch_office.phone_numbers
       %td.text-center
         - if branch_office.main?
           %span.text-success
