--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -12,6 +12,7 @@
     = stylesheet_link_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css'
     = stylesheet_link_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/3.0.5/daterangepicker.min.css'
     = stylesheet_link_tag '//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap3-editable/css/bootstrap-editable.css'
+    = stylesheet_link_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.18/css/bootstrap-select.min.css'
     = stylesheet_link_tag 'application', media: 'all'
     = csrf_meta_tags
   %body
@@ -72,5 +73,6 @@
     = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js'
     = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/jQuery.print/1.5.1/jQuery.print.min.js'
     = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap3-editable/js/bootstrap-editable.js'
+    = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.18/js/bootstrap-select.min.js'
     = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/keyboardjs/2.7.0/keyboard.min.js'
     = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/cleave.js/1.0.2/cleave.min.js'
